k8s/envs/qa/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  template:
    spec:
      containers:
      - name: node-app
        image: franklinribe/node-app
