k8s/envs/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-app-node
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: node-app.qa.techchurch.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-node
            port:
              name: node-port
